--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -58,7 +58,7 @@ jobs:
       matrix:
         build: ${{ fromJson(needs.generate-matrix-test.outputs.test_matrix) }}
 
-    runs-on: ${{ !matrix.build.shared-runners && fromJson(format('["{0}", "in-service"]', matrix.build.runs-on)) || matrix.build.runs-on  }}
+    runs-on: ${{ !matrix.build.shared-runners && fromJson(format('["{0}"]', matrix.build.runs-on)) || matrix.build.runs-on  }}
 
     # Keep this name in sync with the fetch-job-id step
     name: "test ${{ matrix.build.test-mark }} (${{ matrix.build.runs-on }}, ${{ matrix.build.name }}, ${{ strategy.job-index }})"
